Fix: day schedule card overlapping on mobile

--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -1079,5 +1079,13 @@ body#levels {
       display: block;
     }
 
+    .schedule-days > article {
+      height: auto;
+    }
+
+    .schedule-days > article + article {
+      margin-top: 1rem;
+    }
+
   }
 }
